--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<app-title>git remote add origin https://github.com/AleoshGG/MyLibrary-Front-.git
-  git branch -M main
-  git push -u origin main</app-title>
+<app-title></app-title>
