--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,1 +1,6 @@
-<p>title works!</p>
+<div class="title-contend">
+    <div class="title-box">
+        <img src="libro1.png" alt="logo">
+        <h1>Mi Biblioteca</h1>
+    </div>
+</div>
