--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+}
+
