--- a/src/app/books/card-book/card-book.component.css
+++ b/src/app/books/card-book/card-book.component.css
@@ -9,11 +9,12 @@
     transform: scale(0.95);
     transition: 0.85s;
     cursor: pointer;
+    box-shadow: 0px 0px 10px 2px #376996;
 }
 
 .card-content:active {
     transition: 0.5s;
-    background: #376996;
+    background: #000;
 }
 
 .img > img {
