--- a/src/app/edit/edit-form/edit-form.component.html
+++ b/src/app/edit/edit-form/edit-form.component.html
@@ -1,6 +1,6 @@
 <div class="edit-content">
     <header>
-        <img src="" alt="libro3">
+        <img src="libro3.png" alt="libro3">
         <h1>Don Quijote de la Mancha</h1>
     </header>
 
