Terminado consumo de nacionalidades y generos literarios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,1 @@
-<div>
-  <app-form-books></app-form-books>
-</div>
-
-<div>
-  <app-card-book></app-card-book>
-</div>
-
-<div>
-  <app-buttons></app-buttons>
-</div>
-
-<div>
-  <app-form-author></app-form-author>
-</div>
-
-<div>
-  <app-edit-form></app-edit-form>
-</div>
+<app-registration-page></app-registration-page>
