Recopilando informacion del form1

--- a/src/app/authors/form-author/form-author.component.html
+++ b/src/app/authors/form-author/form-author.component.html
@@ -39,7 +39,7 @@
     </div>
     <div class="require">
       <label for="place_birth" class="label">Lugar de nacimiento</label>
-      <input type="number" class="input" name="place_birth" />
+      <input type="text" class="input" name="place_birth" />
     </div>
   </div>
 </div>
