--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -1,10 +1,10 @@
 <div class="buttons-content">
-    <div class="msg">
-        <img src="info.png" alt="info">
-        <p>No olvides guardar los cambios</p>
-    </div>
-    <div class="btn-ct">
-        <button class="btn-true">Guardar</button>
-        <button class="btn-false">Cancelar</button>
-    </div>
+  <div class="msg">
+    <img src="info.png" alt="info" />
+    <p>No olvides guardar los cambios</p>
+  </div>
+  <div class="btn-ct">
+    <button class="btn-true" (click)="onSave()">Guardar</button>
+    <button class="btn-false" (click)="cancel()">Cancelar</button>
+  </div>
 </div>
