--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -14,7 +14,7 @@
 
     <div class="resourse-content">
         <div class="forms-content">
-            <app-form-books></app-form-books> <br><br>
+            <app-form-books (formDataEmitter)="onFormBooksDataReceived($event)"></app-form-books> <br><br>
             <app-form-author></app-form-author> <br><br>
         </div>
         <div class="cards-content">
@@ -22,7 +22,6 @@
         </div>
     </div>
 
-    <app-buttons></app-buttons>
 </div>
 
 <app-footer></app-footer>
