--- a/src/app/books/card-book/card-book.component.html
+++ b/src/app/books/card-book/card-book.component.html
@@ -1,4 +1,4 @@
-<div class="card-content">
+<div class="card-content" (click)="navigateToEdit()">
     <div class="img">
         <img src="libro2.png" alt="libro">
     </div>
