Falta hacer el crud

--- a/src/app/edit-data-page/edit-data-page.component.html
+++ b/src/app/edit-data-page/edit-data-page.component.html
@@ -1,1 +1,13 @@
-<p>edit-data-page works!</p>
+<div class="page">
+  <app-title></app-title>
+
+  <div class="info-content">
+    <div class="info-msg">
+      <img src="info.png" alt="info" />
+      <p>Detalles del libro</p>
+    </div>
+  </div>
+
+  <app-edit-form></app-edit-form>
+</div>
+<app-footer></app-footer>
