--- a/src/app/edit-data-page/edit-data-page.component.html
+++ b/src/app/edit-data-page/edit-data-page.component.html
@@ -1,5 +1,5 @@
 <div class="page">
-  <app-title></app-title>
+  <app-title routerLink="/"></app-title>
 
   <div class="info-content">
     <div class="info-msg">
