--- a/src/app/readers/details-reader/details-reader.component.html
+++ b/src/app/readers/details-reader/details-reader.component.html
@@ -1,6 +1,6 @@
 <div class="details-content">
     <div class="details-text">
-        <p>Nombre: {{reader.first_name}}</p>
+        <p>Nombre: {{reader.first_name}} {{reader.last_name}}</p>
         <p>Estado de la cuenta: {{reader.account_status}}</p>
         <p>Libros aún no devueltos:</p>
         <ul *ngFor="let book of books">
@@ -9,8 +9,8 @@
     </div>
     Elije qué pasará con la cuenta
     <div class="btn-actions">
-        <button>Desactivar</button>
-        <button>Activar</button>
-        <button>Eliminar</button>
+        <button (click)="setStatusSuspended()">Suspender</button>
+        <button (click)="setStatusActive()">Activar</button>
+        <button (click)="deleteAccount()">Eliminar</button>
     </div>
 </div>
