--- a/src/app/edit-data-page/edit-data-page.component.html
+++ b/src/app/edit-data-page/edit-data-page.component.html
@@ -1,10 +1,4 @@
 <div class="page">
-  <div class="info-content">
-    <div class="info-msg">
-      <img src="info.png" alt="info" />
-      <p>Detalles del libro</p>
-    </div>
-  </div>
-
+  <msg-info [msg]="'Detalles del libro'"></msg-info>
   <app-edit-form></app-edit-form>
 </div>
