--- a/src/app/registration-page/registration-page.component.html
+++ b/src/app/registration-page/registration-page.component.html
@@ -1,13 +1,7 @@
 <div class="page-content">
   <div class="info-content">
-    <div class="info-msg">
-      <img src="info.png" alt="info" />
-      <p>Usa este apartado para añadir nuevos libros</p>
-    </div>
-    <div class="info-msg">
-      <img src="info.png" alt="info" />
-      <p>Toca en un libro para tener más información sobre él</p>
-    </div>
+    <msg-info [msg]="'Usa este apartado para añadir nuevos libros'" />
+    <msg-info [msg]="'Toca en un libro para tener más información sobre él'" />
   </div>
 
   <div class="resourse-content">
