--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,6 +1,14 @@
 <div class="title-contend">
-    <div class="title-box">
-        <img src="libro1.png" alt="logo">
-        <h1>Mi Biblioteca</h1>
-    </div>
+
+  <div class="title-box" routerLink="/">
+    <img src="libro1.png" alt="logo" />
+    <h1>Mi Biblioteca</h1>
+    
+  </div>
+
+  <div class="menu">
+    <h3 routerLink="/readers">Lectores</h3>
+    <h3 routerLink="/loans">Préstamos</h3>
+  </div>
+
 </div>
