--- a/src/app/readers/searcher/searcher.component.html
+++ b/src/app/readers/searcher/searcher.component.html
@@ -1,19 +1,22 @@
 <div class="searcher-content">
   <h1>Buscador de lectores</h1>
-  <input
-    type="text"
-    placeholder="Ingresa el nombre completo del lector"
-    [(ngModel)]="readerName"
-  />
-  <button (click)="search()">Buscar</button>
 
-  <div>
-    <img src="" alt="imagenInicial" *ngIf="flagDefault; else options" />
+  <div class="search">
+    <input
+      type="text"
+      placeholder="Ingresa el nombre completo del lector"
+      [(ngModel)]="readerName"
+    />
+    <button (click)="search()">Buscar</button>
+  </div>
+
+  <div class="response">
+    <img src="imagenInicial.jpg" alt="imagenInicial" *ngIf="flagDefault; else options" />
 
     <ng-template #options>
-      <img src="" alt="imagenSinResultados" *ngIf="flagSearch; else details" />
+      <img src="imagenSinResultados.png" alt="imagenSinResultados" *ngIf="flagSearch; else details" />
 
-      <ng-template #details> 
+      <ng-template #details>
         <details-reader [reader]="reader"></details-reader>
       </ng-template>
     </ng-template>
