Terminado estilos addLoan

--- a/src/app/loans/details-search/details-search.component.html
+++ b/src/app/loans/details-search/details-search.component.html
@@ -1,6 +1,18 @@
 <div *ngIf="work == 'show'; else actions">
-    <p>Nombre: {{reader.first_name}} {{reader.last_name}}</p>
-    <p>Estado de cuenta: {{reader.account_status}}</p>
+    <h4>
+        Nombre:
+        <p>{{ reader.first_name }} {{ reader.last_name }}</p>
+      </h4>
+      <h4>
+        Estado de la cuenta:
+        <p *ngIf="reader.account_status == 'active'; else suspended">
+          Activa <img src="active.png" alt="" />
+        </p>
+  
+        <ng-template #suspended>
+          <p>Suspendida <img src="suspended.png" alt="" /></p>
+        </ng-template>
+      </h4>
 </div>
 
 <ng-template #actions>
