--- a/src/app/loans/new-loan/new-loan.component.html
+++ b/src/app/loans/new-loan/new-loan.component.html
@@ -1,10 +1,15 @@
-<div>
+<div class="content">
+  <h1>Registrar un préstamo</h1>
   <searches
     (searchData)="getDataReader($event)"
     (addBooks)="addBooks($event)"
   ></searches>
+  <br>
+  <label>Ingresa la fecha de entrega:</label> <br>
+  <input type="date" [(ngModel)]="delivery_date" /> <br>
 
-  <label>Ingresa la fecha de entrega:</label>
-  <input type="date" [(ngModel)]="delivery_date" />
-  <button (click)="addLoan()">Generar préstamo</button>
+  <div class="btn">
+    <button (click)="addLoan()">Generar préstamo</button>
+  </div>
+  
 </div>
