--- a/src/app/loans/searches/searches.component.html
+++ b/src/app/loans/searches/searches.component.html
@@ -1,21 +1,31 @@
 <div class="searcher-content">
-  <div>
-    <input
-      type="text"
-      placeholder="Ingresa el nombre completo del lector"
-      [(ngModel)]="readerName"
-    />
-    <button (click)="searchReader()">Buscar</button>
-    <details-search *ngIf="flagDetails" [reader]="reader" [work]="'show'"/>
+  <div class="content">
+    <div class="search">
+      <input
+        type="text"
+        placeholder="Ingresa el nombre completo del lector"
+        [(ngModel)]="readerName"
+      />
+      <button (click)="searchReader()">Buscar</button>
+    </div>
+    <details-search *ngIf="flagDetails" [reader]="reader" [work]="'show'" />
   </div>
 
-  <div>
-    <input
-      type="text"
-      placeholder="Ingresa el titulo del libro"
-      [(ngModel)]="bookTitle"
+  <div class="content">
+    <div class="search">
+      <input
+        type="text"
+        placeholder="Ingresa el titulo del libro"
+        [(ngModel)]="bookTitle"
+      />
+      <button (click)="searchBook()">Buscar</button>
+    </div>
+
+    <details-search
+      *ngIf="flagDetails"
+      [book]="book"
+      [work]="'actions'"
+      (addBooks)="addBook($event)"
     />
-    <button (click)="searchBook()">Buscar</button>
-    <details-search *ngIf="flagDetails" [book]="book" [work]="'actions'" (addBooks)="addBook($event)"/>
   </div>
 </div>
