--- a/src/app/loans/expired-loans/expired-loans.component.html
+++ b/src/app/loans/expired-loans/expired-loans.component.html
@@ -1,4 +1,6 @@
-<div>
+<div class="content">
+  <h1>Libros no devueltos</h1>
+  
   <table>
     <thead>
       <tr>
@@ -15,7 +17,10 @@
         <td>{{ loan.reader.first_name }} {{ loan.reader.last_name }}</td>
         <td>{{ loan.reader.phone_number }} | {{ loan.reader.email }}</td>
         <td>{{ loan.delivery_date }}</td>
-        <td><button (click)="suspendetAccount(loan.id_reader)">Suspender</button> <button (click)="deleteAccount(loan.id_reader)">Eliminar</button></td>
+        <td>
+          <button (click)="suspendetAccount(loan.id_reader)" id="suspended">Suspender</button>
+          <button (click)="deleteAccount(loan.id_reader)" id="delete">Eliminar</button>
+        </td>
       </tr>
     </tbody>
   </table>
