--- a/src/app/loans/view-loans/view-loans.component.html
+++ b/src/app/loans/view-loans/view-loans.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-    <new-loan></new-loan>
-    <delivery></delivery>
-    <expired-loans></expired-loans>
+  <new-loan></new-loan> <br /><br />
+  <delivery></delivery> <br /><br />
+  <expired-loans></expired-loans>
 </div>
